[package]
name = "rasterize"
version = "0.2.7"
authors = ["Pavel Aslanov <asl.pavel@gmail.com>"]
description = "Simple and small 2D rendering library"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "data/squirrel.png",
]
homepage = "https://github.com/aslpavel/rasterize"
repository = "https://github.com/aslpavel/rasterize.git"
license = "MIT"
readme = "README.md"
keywords = ["2d", "rendering"]
categories = ["rendering"]

[features]
default = ["serde", "simd"]
simd = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
tracing = "^0.1"
serde = { version = "1.0", features = ["rc", "derive"], optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
png = { version = "^0.17", optional = true }

[dev-dependencies]
criterion = { version = "^0.3", features = ["html_reports"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[[bench]]
harness = false
name = "rasterize_bench"

[[bench]]
harness = false
name = "scene_bench"

[[bench]]
harness = false
name = "color_bench"


[[example]]
name = "scene"
required-features = ["serde"]