[package]
name = "rasterize"
version = "0.6.4"
authors = ["Pavel Aslanov <asl.pavel@gmail.com>"]
description = "Simple and small 2D rendering library"
edition = "2024"
include = [
    "**/*.rs",
    "src/svg-colors.txt",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "data/squirrel.png",
]
homepage = "https://github.com/aslpavel/rasterize"
repository = "https://github.com/aslpavel/rasterize.git"
license = "MIT"
readme = "README.md"
keywords = ["2d", "rendering"]
categories = ["rendering"]

[features]
default = ["serde", "simd"]
simd = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
tracing = "^0.1"
serde = { version = "1.0", features = ["rc", "derive"], optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
png = { version = "^0.17", optional = true }
bytemuck = { version = "1.21", features = ["derive"] }
lexical-core = { version = "^1.0", default-features = false, features = [ "write-floats", "format" ] }

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

[[bench]]
harness = false
name = "rasterize_bench"

[[bench]]
harness = false
name = "scene_bench"

[[bench]]
harness = false
name = "color_bench"

[[example]]
name = "rasterize"

[[example]]
name = "scene"
required-features = ["serde"]
